--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -1,8 +1,11 @@
 {% extends './base.html' %}
+{% load static %}
 
 {% block mobile-resume-nav %}
 <li class="nav-item active">
-    <a class="nav-link nav-text" href=""><i class="fas fa-file-signature"></i> Resume</a>
+    <a class="nav-link nav-text" href="">
+      <img src="{% static 'static_website/svg/file-signature-solid.svg' %}"> Resume
+    </a>
 </li>
 {% endblock %}
 
@@ -12,7 +15,9 @@
 
 {% block desktop-resume-nav %}
 <li class="nav-item active">
-    <a class="nav-link nav-text nav-text--light" href=""><i class="fas fa-file-signature"></i> Resume</a>
+    <a class="nav-link nav-text nav-text--light" href="">
+      <img src="{% static 'static_website/svg/file-signature-solid.svg' %}"> Resume
+    </a>
 </li>
 {% endblock %}
 
