--- a/static_website/static/static_website/navbar_style.css
+++ b/static_website/static/static_website/navbar_style.css
@@ -3,6 +3,13 @@
     font-size: 20px;
     font-weight: 400;
     border-bottom: 0.25rem solid transparent;
+    fill: white;
+}
+
+.nav-link img {
+    width: 1.4rem;
+    fill: white;
+    padding-bottom: 0.3rem;
 }
 
 .nav-text--dark {
@@ -11,6 +18,7 @@
 
 .nav-text--light {
     color: white;
+    fill: white;
 }
 
 .nav-text--dark:hover {
