Final touches to downloaded svg navbar files

--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -9,18 +9,24 @@
 {% endblock %} 
 
 {% block mobile-blog-nav %}
-<li class="nav-item active">
-    <a class="nav-link nav-text" href="{% url 'blog:blog-list' %}">
-        <img src="{% static 'static_website/svg/blog-solid.svg' %}"> SkyBlue Blogging
+<li class="nav-item">
+    <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
+        <svg>
+        <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
+        </svg>
+        <span class="svg-text">SkyBlue Blogging</span>
     </a>
 </li>
 {% endblock %}
 
 {% block desktop-blog-nav %}
-<li class="nav-item active">
-  <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
-    <img src="{% static 'static_website/svg/blog-solid.svg' %}"> SkyBlue Blogging
-  </a>
+<li class="nav-item">
+    <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
+        <svg>
+        <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
+        </svg>
+        <span class="svg-text">SkyBlue Blogging</span>
+    </a>
 </li>
 {% endblock %}
 
