More navbar stylistic changes

--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -9,7 +9,7 @@
 {% endblock %} 
 
 {% block mobile-blog-nav %}
-<li class="nav-item">
+<li class="nav-item mobile">
     <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
         <svg>
         <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
