--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block mobile-home-nav %}
-<li class="nav-item">
+<li class="nav-item mobile">
   <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
     <svg>
       <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
