--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block mobile-resume-nav %}
-<li class="nav-item">
+<li class="nav-item mobile">
   <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:resume' %}">
     <svg>
       <use href="{% static 'static_website/icons/file-signature-solid.svg#resume' %}"></use>
