Adding new icons from FlatIcon, navbar will only utilize icons, no text

--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -44,7 +44,7 @@
       <li class="nav-item mobile">
         <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
           <svg>
-            <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
+            <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
           </svg> 
           <span class="svg-text">Home</span>
         </a>
@@ -54,7 +54,7 @@
       <li class="nav-item mobile">
         <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:resume' %}">
           <svg>
-            <use href="{% static 'static_website/icons/file-signature-solid.svg#resume' %}"></use>
+            <use href="{% static 'static_website/icons/resume.svg#resume' %}"></use>
           </svg>
           <span class="svg-text">Resume</span>
         </a>
@@ -103,7 +103,7 @@
           <li class="nav-item">
             <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
               <svg>
-                <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
+                <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
               </svg> 
               <span class="svg-text">Home</span>
             </a>
@@ -113,9 +113,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:resume' %}">
               <svg>
-                <use href="{% static 'static_website/icons/file-signature-solid.svg#resume' %}"></use>
+                <use href="{% static 'static_website/icons/resume.svg#resume' %}"></use>
               </svg>
-              <span class="svg-text">Resume</span>
+              <!-- <span class="svg-text">Resume</span> -->
             </a>
           </li>
         {% endblock %}
@@ -123,9 +123,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
               <svg>
-                <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
+                <use href="{% static 'static_website/icons/blog.svg#blog' %}"></use>
               </svg>
-              <span class="svg-text">SkyBlue Blogging</span>
+              <!-- <span class="svg-text">SkyBlue Blogging</span> -->
             </a>
           </li>
         {% endblock %}
@@ -138,7 +138,7 @@
               <svg>
                 <use href="{% static 'static_website/icons/gem-solid.svg#sapphire-design' %}"></use>
               </svg>
-              <span class="svg-text">Sapphire Design</span>
+              <!-- <span class="svg-text">Sapphire Design</span> -->
             </a>
           </li>
           <li class = "nav-item">
@@ -146,7 +146,7 @@
               <svg>
                 <use href="{% static 'static_website/icons/github-brands.svg#github' %}"></use>
               </svg>
-              <span class="svg-text">Github</span>
+              <!-- <span class="svg-text">Github</span> -->
             </a>
           </li>
         </ul>
