--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -4,7 +4,7 @@
 
 {% block hero-image-text %}
 <div class="container-fluid hero-text">
-  <p class="hero-home-heading text-center">Wassim Katbey</p>  
+  <p class="hero-home-heading text-center">Wassim Katbey</p>
   <p class = "hero-home-subheading text-center">
     Full-Stack Web Developer, and Hobbyist
   </p>
@@ -20,9 +20,9 @@
 <li class="nav-item mobile">
   <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
     <svg>
-      <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
+      <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
     </svg> 
-    <span class="svg-text">Home</span>
+    <!-- <span class="svg-text">Home</span> -->
   </a>
 </li>
 {% endblock %}
@@ -31,9 +31,9 @@
 <li class="nav-item">
   <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
     <svg>
-      <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
+      <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
     </svg> 
-    <span class="svg-text">Home</span>
+    <!-- <span class="svg-text">Home</span> -->
   </a>
 </li>
 {% endblock %}
@@ -53,14 +53,14 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 align-self-center">
         <p class = "reading-font">
-          My name is Wassim, and I study Computer Science at Wayne State University. <br><br>I write web applications using a variety of frameworks. 
-          I've used several frameworks for both academic, side, and professional work. I like learning about, and experimenting with new web technologies, 
+          My name is Wassim, and I study Computer Science at Wayne State University. <br><br>I write web applications using a variety of frameworks.
+          I've used several frameworks for both academic, side, and professional work. I like learning about, and experimenting with new web technologies,
           like Angular and Vue. However, my qualities go beyond technical skillset.
         </p>
         <br>
         <p class = "reading-font">
           Besides work, I have lots of hobbies and interests. I love Aviation, catch up on the latest in the industry, and use a flight simulator.
-        
+
           I love Architecture and Civil Engineering, and watch many documentaries depicting the construction of symbolic skyscrapers.
           Additionally, I like photography (I took every photo on this website!).
         </p>
@@ -76,8 +76,8 @@
 	        <div class="attribute-heading-text padding-bottom">>>> Problem Oriented</div>
 	        <div class = "attribute-body-text text-left">
 	          As a junior developer, I encounter many problems while programming. My first solution is to reference
-            official documentation wherever I can, so long as it's relevant. From there I look for other sources to 
-            see if anybody else has encountered the same problem. Knowing how to search for what I'm looking for is a 
+            official documentation wherever I can, so long as it's relevant. From there I look for other sources to
+            see if anybody else has encountered the same problem. Knowing how to search for what I'm looking for is a
             skill that took some time to develop.
 	        </div>
 	      </div>
@@ -105,7 +105,7 @@
 	      </div>
 	    </div>
 	    <br><br><br>
-  	</div>  
+  	</div>
   </div>
   <div class="container">
     <p class = "heading-text padding-top padding-bottom text-center">
