The mobile navbar icons will continue to use the previous FA icons. Changed the website's font to Rajdhani

--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -20,9 +20,9 @@
 <li class="nav-item mobile">
   <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
     <svg>
-      <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
+      <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
     </svg> 
-    <!-- <span class="svg-text">Home</span> -->
+    <span class="svg-text">Home</span>
   </a>
 </li>
 {% endblock %}
