--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -23,9 +23,8 @@
 <li class="nav-item">
     <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
         <svg>
-        <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
+        <use href="{% static 'static_website/icons/blog.svg#blog' %}"></use>
         </svg>
-        <span class="svg-text">SkyBlue Blogging</span>
     </a>
 </li>
 {% endblock %}
