--- a/static_website/static/static_website/custom_stylesheet.css
+++ b/static_website/static/static_website/custom_stylesheet.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400&display=swap');
+
+body {
+    font-family: 'Rajdhani', sans-serif;
+}
+
 html {
     font-size: 16px;
 }
