--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -8,9 +8,9 @@
   <p class = "hero-home-subheading text-center">
     Full-Stack Web Developer, and Hobbyist
   </p>
-  <div class="text-center">
+  <div class="text-center padding-top">
     <form action="#intro">
-      <button type="submit" id = "introButton" class="btn-hover color-9 text-center">Meet Me</button>
+      <button type="submit" id = "introButton" class="btn-outline-gradient text-center">Meet Me</button>
     </form>
   </div>
 </div>
