--- a/blog/templates/blog/blogentry_list.html
+++ b/blog/templates/blog/blogentry_list.html
@@ -13,7 +13,7 @@
             Read and Write Entries
         </p>
         {% else %}
-        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-blog-heading text-center">Sapphire Blogging</p>
         <p class="hero-blog-subheading text-center">
             A Simple Journaling Platform
         </p>
