--- a/static_website/static/static_website/buttons.css
+++ b/static_website/static/static_website/buttons.css
@@ -9,23 +9,23 @@
     
     color: white;
 
-    font-size: 1.3rem;
+    font-size: 1.6rem;
 
     background-color: transparent;
 
-    border-image: linear-gradient(to right, #b5adff, #ffffff);
+    border-image: linear-gradient(to right, #87d3ff, #ffffff);
 
     border-image-slice: 1;
 
 
-    border-width: 0.2rem;
+    border-width: 0.1rem;
 }
 
 .btn-outline-gradient:hover {
-    color: #aa80ff;
+    /*color: #aa80ff;*/
     cursor: pointer;
 
-    background-color: rgba(253, 252, 255, 0.1);
+    background-color: rgba(253, 252, 255, 0.4);
 }
 
 .btn-hover {
