--- a/static_website/static/static_website/hero_properties.css
+++ b/static_website/static/static_website/hero_properties.css
@@ -5,9 +5,9 @@
     background-size: cover;
 }
 
-.hero-sub-image {
-    background-image: url("./cover-image-3.jpg");
-    height: 40rem;
+.hero-resume {
+    background: linear-gradient(to top, #3d6eff, #4400ff);
+    height: 30rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,26 +17,19 @@
     transform: translateY(10rem);
 }
 
-.hero-small-text {
-    transform: translateY(10rem);
-}
-
-.hero-resume-text {
-    transform: translateY(5rem);
-}
-
-.hero-small-heading {
-    font-size: 3.7rem;
-    font-weight: 400;
+.hero-sub-page-text {
+    transform: translateY(7rem);
     color: white;
-    text-align: center;
 }
 
-.hero-small-subheading {
-    font-size: 2rem;
+.hero-sub-page-heading {
+    font-size: 2.9rem;
     font-weight: 400;
-    color: white;
-    text-align: center;
+}
+
+.hero-sub-page-subheading {
+    font-size: 1.9rem;
+    font-weight: 400;
 }
 
 .hero-home-heading {
@@ -79,14 +72,35 @@
 }
 
 
+@media (min-width: )
+
 /* Large Tablet and Small Laptop Displays */
 @media (min-width: 769px) and (max-width: 1100px) {
     .hero-image {
         height: 100vh;
+        background: linear-gradient(to top, #429bf5, #0021f5);
     }
+
     .hero-text {
-        transform: translate(0rem, 7rem);
-        padding-top: 5rem;
+        transform: translate(0rem, 4rem);
+    }
+
+    @media (max-height: 800px) {
+        .hero-text {
+            transform: translate(0rem, 11rem);
+        }
+    }
+
+    @media (min-height: 900px) and (max-height: 1199px) {
+        .hero-text {
+            transform: translate(0rem, 17rem);
+        }
+    }
+
+    @media (min-height: 1200px) {
+        .hero-text {
+            transform: translate(0rem, 25rem);
+        }
     }
 
     @media (max-height: 700px) {
@@ -99,15 +113,22 @@
 @media (min-width: 576px) and (max-width: 768px) {
     .hero-image {
         height: 100vh;
-    }
-    div.hero-text {
-        padding-top: 5rem;
-        transform: translate(0rem, 7rem);
+        background: linear-gradient(to top, #429bf5, #0021f5);
     }
 
-    @media (max-height: 700px) {
+    div.hero-text {
+        transform: translate(0rem, 4rem);
+    }
+
+    @media (max-height: 500px) {
         .hero-image {
-            height: 40rem;
+            height: 31.25rem;
+        }
+    }
+
+    @media (min-height: 1000px) {
+        div.hero-text {
+            transform: translate(0rem, 19rem);
         }
     }
 }
@@ -116,9 +137,25 @@
 /*Extra Small Devices*/
 
 @media (min-width: 300px) and (max-width: 575.98px) {
-    #introButton {
-        display: none;
+    div.hero-text {
+        transform: translate(0rem, 11rem);
     }
+
+    /* If the user resizes their browser's width (while
+    maintaining their viewport's height) */
+    @media (min-height: 900px) {
+        div.hero-text {
+            transform: translate(0, 18rem);
+        }
+    }
+
+    /* For devices with a smaller height, like a Galaxy S5 */
+    @media (max-height: 700px) {
+        div.hero-text {
+            transform: translate(0rem, 7rem);
+        }
+    }
+
     .hero-home-heading {
         font-size: 2.4rem;
     }
@@ -131,15 +168,11 @@
     .hero-small-subheading {
         font-size: 1.5rem;
     }
-    div.hero-text {
-        padding-top: 1rem;
-        transform: translate(0rem, 1rem);
-    }
+
     .hero-image {
-        height: 35vh;
-    }
-    div.hero-sub-image {
-        height: 14rem;
+        height: 100vh;
+        background-position: top;
+        background: linear-gradient(to top, #429bf5, #0021f5);
     }
 }
 
