--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Read up on me, Wassim Katbey, Full-Stack Software Developer. I wrote this website to display my 
   skillset and accomplishments">
   <meta name="author" content="Wassim Katbey">
@@ -34,106 +34,53 @@
   {% endblock %}
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-dark navbar-mobile">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMobileContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarMobileContent">
-    <ul class="navbar-nav ml-auto navbar-right">
-    {% block mobile-home-nav %}
-      <li class="nav-item mobile">
-        <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
-          <svg>
-            <use href="{% static 'static_website/icons/home-solid.svg#home' %}"></use>
-          </svg> 
-          <span class="svg-text">Home</span>
-        </a>
-      </li>
-    {% endblock %}
-    {% block mobile-resume-nav %}
-      <li class="nav-item mobile">
-        <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:resume' %}">
-          <svg>
-            <use href="{% static 'static_website/icons/file-signature-solid.svg#resume' %}"></use>
-          </svg>
-          <span class="svg-text">Resume</span>
-        </a>
-      </li>
-    {% endblock %}
-    {% block mobile-blog-nav %}
-      <li class="nav-item mobile">
-        <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
-          <svg>
-            <use href="{% static 'static_website/icons/blog-solid.svg#sky-blue-blogging' %}"></use>
-          </svg>
-          <span class="svg-text">SkyBlue Blogging</span>
-        </a>
-      </li>
-    {% endblock %}
-      <li class = "nav-item mobile">
-        <a class="nav-link nav-text nav-text--light" href="http://github.com/wkatbey">
-          <svg>
-            <use href="{% static 'static_website/icons/github-brands.svg#github' %}"></use>
-          </svg>
-          <span class="svg-text">Github</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 {% block hero-image-type %}
 <div class = "hero-image">
 {% endblock %}
-  <nav class="navbar navbar-expand-lg navbar-transparent navbar-desktop">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto navbar-right">
-        {% block desktop-home-nav %}
-          <li class="nav-item">
-            <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}">
-              <svg>
-                <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
-              </svg> 
-            </a>
-          </li>
-        {% endblock %}
-        {% block desktop-resume-nav %}
-          <li class="nav-item">
-            <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:resume' %}">
-              <svg>
-                <use href="{% static 'static_website/icons/resume.svg#resume' %}"></use>
-              </svg>
-              <!-- <span class="svg-text">Resume</span> -->
-            </a>
-          </li>
-        {% endblock %}
-        {% block desktop-blog-nav %}
-          <li class="nav-item">
-            <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
-              <svg>
-                <use href="{% static 'static_website/icons/blog.svg#blog' %}"></use>
-              </svg>
-              <!-- <span class="svg-text">SkyBlue Blogging</span> -->
-            </a>
-          </li>
-        {% endblock %}
-        {% block blog-profile-link %}
-        {% endblock %}
-        {% block blog-create-link %}
-        {% endblock %}
-          <li class = "nav-item">
-            <a class="nav-link nav-text nav-text--light" href="http://github.com/wkatbey">
-              <svg>
-                <use href="{% static 'static_website/icons/github.svg#github' %}"></use>
-              </svg>
-              <!-- <span class="svg-text">Github</span> -->
-            </a>
-          </li>
-        </ul>
-      </div>
+ <nav>
+    <ul class="navbar-container">
+    {% block desktop-home-nav %}
+      <li class="nav-item">
+        <a class="nav-text nav-text--light" href="{% url 'static_website:index' %}">
+          <svg>
+            <use href="{% static 'static_website/icons/home.svg#home' %}"></use>
+          </svg> 
+        </a>
+      </li>
+    {% endblock %}
+    {% block desktop-resume-nav %}
+      <li class="nav-item">
+        <a class="nav-text nav-text--light" href="{% url 'static_website:resume' %}">
+          <svg>
+            <use href="{% static 'static_website/icons/resume.svg#resume' %}"></use>
+          </svg>
+        </a>
+      </li>
+    {% endblock %}
+    {% block desktop-blog-nav %}
+      <li class="nav-item">
+        <a class="nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
+          <svg>
+            <use href="{% static 'static_website/icons/blog.svg#blog' %}"></use>
+          </svg>
+          <!-- <span class="svg-text">SkyBlue Blogging</span> -->
+        </a>
+      </li>
+    {% endblock %}
+    {% block blog-profile-link %}
+    {% endblock %}
+    {% block blog-create-link %}
+    {% endblock %}
+      <li class = "nav-item">
+        <a class="nav-text nav-text--light" href="http://github.com/wkatbey">
+          <svg>
+            <use href="{% static 'static_website/icons/github.svg#github' %}"></use>
+          </svg>
+          <!-- <span class="svg-text">Github</span> -->
+        </a>
+      </li>
+    </ul>
   </nav>
   {% block hero-image-text %}
   <div class = "hero-text text-center">
