--- a/blog/static/blog/spacing.css
+++ b/blog/static/blog/spacing.css
@@ -1,5 +1,13 @@
+.blog-heading--without-preceeding-icon {
+	padding-left: 1.9rem;
+}
+
 .blog-heading-icon {
     padding-left: 1rem;
+}
+
+.blog-heading-icon--preceeding {
+	padding-right: 0.5rem;
 }
 
 #editor-container {
