--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -28,7 +28,16 @@
     <div class="row">
         <div class="col-lg-6">
             <p class="reading-font">
-                <a class="gray-link" href="{% url 'blog:blog-detail' blog.id %}">{{ blog.title }}</a>
+                {% if blog.private %}
+                <span class="blog-heading-icon--preceeding">
+                    <i class="fas fa-lock"></i>
+                </span>
+                {% endif %}
+                
+                <a  class="gray-link 
+                    {% if not blog.private %} blog-heading--without-preceeding-icon {% endif %}"
+                    href="{% url 'blog:blog-detail' blog.id %}">{{ blog.title }}</a>
+                
                 {% if user.is_authenticated and blog.author.id == user.id %}
                 <a class="gray-link blog-heading-icon" href="{% url 'blog:blog-update' blog.id %}">
                     <i class="fas fa-edit"></i>
