--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class="hero-blog-small-image">
+<div class="hero-blog-image-small user-posts">
 {% endblock %} 
 
 {% block hero-image-text %}
